--- a/src/components/_header.scss
+++ b/src/components/_header.scss
@@ -2,9 +2,10 @@
     width: 3rem;
 }
 .header {
-    width: 80%;
-    margin: 0 auto;
+    width: 100vw;
+    padding: .5rem 7rem;
     display: flex;
     justify-content: space-between;
     align-items: center;
+    border-bottom: 1px solid rgb(192, 188, 188);
 }
