--- a/src/components/_navbar.scss
+++ b/src/components/_navbar.scss
@@ -1,7 +1,7 @@
 .list {
     list-style: none;
     display: flex;
-    margin: 1rem 0;
+    margin: .5rem 0;
 }
 .button-container {
     display: flex;
